name:                bg-api
version:             0.1.0.0
synopsis:            API with board game data
description:         Please see README.md
homepage:            https://gitlab.com/inkami/bg-api#readme
license:             MIT
license-file:        LICENSE
author:              Nikolai Brendler
maintainer:          nbrendler@gmail.com
copyright:           2016 Nikolai Brendler
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
  other-modules:       Api
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , postgresql-simple
                     , servant-server
                     , servant
                     , text
                     , wai
                     , wai-cors
                     , warp
  default-language:    Haskell2010

executable bg-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bg-api
  default-language:    Haskell2010

test-suite bg-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bg-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bg-api
